@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-18T16:08:26Z",
-  "count_outdated" : 71,
-  "uniques_outdated" : 33,
+  "timestamp" : "2022-11-19T08:08:27Z",
+  "count_outdated" : 72,
+  "uniques_outdated" : 34,
   "count" : 76,
   "uniques" : 38,
   "views" : [
-    {
-      "timestamp": "2022-11-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-07T00:00:00Z",
       "count": 1,
