@@ -1,3 +1,11 @@
+2022-11-19T08:08:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502697959 # 627
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 71 / 38 76
+* notice: next accum: outdated-unq outdated-all / unq all: 34 72 / 38 76
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-05] / []
+
 2022-11-18T16:08:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3498422524 # 625
 * notice: last 14d: unq all: 5 5
